<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/iteReset"
        android:title="@string/Title_Reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/iteHelp"
        android:title="@string/title_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/idTransparent"
        android:title="@string/itetransparent"
        />
    <item
        android:id="@+id/idSemiTransparent"
        android:title="@string/iteSemitransparent"
        />
    <item
        android:id="@+id/idOpaque"
        android:title="@string/iteOpaque"
        />
    <item
        android:id="@+id/idBlack"
        android:title="@string/iteBlack"
        />
    <item
        android:id="@+id/idWhite"
        android:title="@string/iteWhite"
        />
    <item
        android:id="@+id/idRed"
        android:title="@string/iteRed"
        />
    <item
        android:id="@+id/idGreen"
        android:title="@string/iteGreen"
        />
    <item
        android:id="@+id/idBlue"
        android:title="@string/iteBlue"
        />
    <item
        android:id="@+id/idCyan"
        android:title="@string/iteCyan"
        />
    <item
        android:id="@+id/idMagenta"
        android:title="@string/iteMagenta"
        />
    <item
        android:id="@+id/idYellow"
        android:title="@string/iteYellow"
        />
    <item
        android:id="@+id/idBrown"
        android:title="@string/iteBrown"
        />
    <item
        android:id="@+id/itemAboutOf"
        android:title="@string/title_aboutOf"
        />
    <item
        android:id="@+id/iteExit"
        android:title="@string/Title_ite_exit"
        />

</menu>